fix styles on small mobile screen

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -454,4 +454,8 @@ a {
 
     }
 
+    .custom-select-sm {
+        margin-top: 20px;
+    }
+
 }
